# scorefall-studio

./: .firebaserc  .gitignore  Cargo.toml  README.md
.github/workflows/: firebase-hosting-pull-request.yml
src/: main.rs  sma.rs
