[package]
name = "scorefall-studio"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasts = "0.7"
wavy = "0.8"
fon = "0.4"
ebur128 = "0.1"
semtext = { path = "../semtext" }
